[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "loan-default"
version = "0.1.0"
description = "End-to-end loan default early-warning system"
requires-python = ">=3.11"
dependencies = [
    "pandas>=2.2",
    "numpy>=1.26",
    "scikit-learn>=1.5",
    "xgboost>=2.0",
    "optuna>=3.6",
    "shap>=0.45",
    "mlflow>=2.13",
    "fastapi>=0.110",
    "uvicorn[standard]>=0.29",
    "pydantic>=2.7",
    "pydantic-settings>=2.2",
    "sqlalchemy>=2.0",
    "anthropic>=0.25",
    "python-dotenv>=1.0",
    "joblib>=1.4",
    "imbalanced-learn>=0.12",
    "psutil>=5.9",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-cov>=5.0",
    "httpx>=0.27",
    "mypy>=1.10",
    "ruff>=0.4",
]
dashboard = [
    "streamlit>=1.35",
    "plotly>=5.22",
]

[tool.hatch.build.targets.wheel]
packages = ["src/loan_default"]

[tool.ruff]
line-length = 88
select = ["E", "F", "I"]

[tool.mypy]
python_version = "3.11"
strict = false
ignore_missing_imports = true

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-v --tb=short"
